Add Mongo storage and performance benchmarks